Integrated TamilGlitz data chart