@@ -5,6 +5,12 @@ plugins {
     id("org.jetbrains.compose")
 }
 
+repositories {
+    google()
+    mavenCentral()
+    maven { url = uri("https://jogamp.org/deployment/maven") }
+}
+
 kotlin {
     jvm()
     sourceSets {
@@ -25,6 +31,17 @@ compose.desktop {
             targetFormats(TargetFormat.Dmg, TargetFormat.Msi, TargetFormat.Deb)
             packageName = "KotlinMultiplatformComposeDesktopApplication"
             packageVersion = "1.0.0"
+            includeAllModules = true
+        }
+        buildTypes.release.proguard {
+            configurationFiles.from("compose-desktop.pro")
+        }
+        jvmArgs("--add-opens", "java.desktop/sun.awt=ALL-UNNAMED")
+        jvmArgs("--add-opens", "java.desktop/java.awt.peer=ALL-UNNAMED") // recommended but not necessary
+
+        if (System.getProperty("os.name").contains("Mac")) {
+            jvmArgs("--add-opens", "java.desktop/sun.lwawt=ALL-UNNAMED")
+            jvmArgs("--add-opens", "java.desktop/sun.lwawt.macosx=ALL-UNNAMED")
         }
     }
 }
